--- a/src/app/work/projects/adly.mdx
+++ b/src/app/work/projects/adly.mdx
@@ -8,7 +8,7 @@ images:
 #   - name: "Ahsan Mughal"
 #     role: "PHP/Laravel Developer"
 #     avatar: "/images/ahsan.png"
-#     linkedIn: "https://www.linkedin.com/in/mughalahsan718"
+#     linkedIn: "https://www.linkedin.com/in/muhammad-ahsan-mughal-0879b639b/"
 ---
 
 # Ascendexits - Private Equity Web Portal
